Project1/config/temp/unpackaged/Demo/objects/Lesson__c.object
<CustomObject>
    <description>Activities completed by students to help understand subject matter</description>
    <fields>
        <fullName>Lesson_Status__c</fullName>
        <description>Notifies student and tutor is lesson has been completed.</description>
        <label>Lesson Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_L__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Lessons</relationshipLabel>
        <relationshipName>Lessons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lesson related to subject</description>
        <label>Subject</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipLabel>Lessons</relationshipLabel>
        <relationshipName>Lessons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tutor is a user</description>
        <label>Tutor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lessons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lesson</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lesson_View</fullName>
        <columns>NAME</columns>
        <columns>Student_L__c</columns>
        <columns>User_Tutor__c</columns>
        <columns>Subject_L__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Lesson View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lesson</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lessons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>